--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.stopkaaaa.develoverslife"
@@ -41,34 +41,49 @@ android {
 }
 
 dependencies {
+    def androidx_lifecycle_ver = "2.3.1"
+    def androidx_lifecycle_ext_vet = "2.2.0"
+    def androidx_core_ver = "1.6.0"
+    def androidx_appcompat_ver = "1.3.1"
+    def androidx_constraint_ver = "2.1.0"
+    def androidx_junit = "1.1.3"
+    def material_ver = "1.4.0"
+    def kotlinx_serialization_json_ver = "1.2.1"
+    def kotlinx_serialization_converter_ver = "0.8.0"
+    def kotlinx_coroutines_ver = "1.5.0"
+    def okhttp_ver = "4.9.1"
+    def retrofit_ver = "2.9.0"
+    def junit_ver = "4.13.2"
+    def espresso_ver = "3.4.0"
+    def glide_ver = "4.12.0"
 
-    //ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    //AndroidX
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidx_lifecycle_ver"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_ver"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_ver"
+    implementation "androidx.lifecycle:lifecycle-extensions:$androidx_lifecycle_ext_vet"
+    implementation "androidx.core:core-ktx:$androidx_core_ver"
+    implementation "androidx.appcompat:appcompat:$androidx_appcompat_ver"
+    implementation "androidx.constraintlayout:constraintlayout:$androidx_constraint_ver"
 
-    //Json
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
-
-    //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01"
+    //KotlinX
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_ver"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlinx_serialization_json_ver"
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation "com.github.bumptech.glide:glide:$glide_ver"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_ver"
 
     //Retrofit
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_ver"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_ver"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_ver"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:$kotlinx_serialization_converter_ver"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //Material
+    implementation "com.google.android.material:material:$material_ver"
+
+    testImplementation "junit:junit:$junit_ver"
+    androidTestImplementation "androidx.test.ext:junit:$androidx_junit"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_ver"
 }
